--- a/app.json
+++ b/app.json
@@ -2,10 +2,9 @@
   "expo": {
     "name": "deepfinances",
     "slug": "deepfinances",
+    "scheme": "deepfinances",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
+    "assetBundlePatterns": ["**/*"]
   },
   "name": "deepfinances"
 }
